landing page progress

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                                 </h1>
 
                                 <div class="button-group">
-                                    <a class="large primary button" href="#">Download for iPhone</a>
+                                    <a class="large primary button" href="#">Download for free</a>
                                     <a class="large hollow button" href="https://github.com/stakes/Frameless">Source on Github</a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="desktop-6">
-                            <img class="centered visible-on-desktop" src="http://placehold.it/300x540" alt="Showcase image">
+                            <img class="centered visible-on-desktop" src="assets/img/lp-img.gif" height="540" width="300" alt="Showcase image">
                         </div>
                     </div><!-- .grid -->
 
@@ -85,6 +85,39 @@
             </div><!-- .section -->
 
             <div id="content" class="content">
+
+                <div class="section">
+
+                    <div class="container">
+
+                        <div class="large margin">
+
+                            <div class="description grid">
+                                <div class="tablet-6 desktop-4">
+                                    <div class="description object">
+                                        <h5>Transparent UI</h5>
+                                        <p>No browser chrome and no status bar. Gestures control browser history and reveal the keyboard.</p>
+                                    </div>
+                                </div>
+                                <div class="tablet-6 desktop-4">
+                                    <div class="description object">
+                                        <h5>Customizable gestures</h5>
+                                        <p>Swipe, tap with three fingers or shake the device. If anything gets in your way, just disable it.</p>
+                                    </div>
+                                </div>
+                                <div class="tablet-6 desktop-4">
+                                    <div class="description object">
+                                        <h5>Built for prototyping</h5>
+                                        <p>Works great with Framer Studio mirroring or previewing any HTML prototypes in a "native" context.</p>
+                                    </div>
+                                </div>
+                              
+                            </div><!-- .grid -->
+
+                        </div><!-- .large margin -->
+
+                    </div><!-- .container -->
+                </div><!-- .section -->
 
                 <div class="container">
 
@@ -175,67 +208,7 @@
 
                 </div><!-- .section -->
 
-                <div class="section">
-
-                    <div class="container">
-
-                        <div class="large margin">
-
-                            <h1 class="section-title">
-                                And that’s not all! See for yourself.
-                                <small>
-                                    Hidden under the hood are powerful features<br class="hidden-on-phones">
-                                    designed to make your life easier.
-                                </small>
-                            </h1>
-
-                        </div>
-
-                        <div class="large margin">
-
-                            <div class="description grid">
-                                <div class="tablet-6 desktop-4">
-                                    <div class="description object">
-                                        <h5>Fully responsive.</h5>
-                                        <p>Lancelot looks good anywhere, on any screen, on any device. Try resizing your browser window to see how the layour adjusts.</p>
-                                    </div>
-                                </div>
-                                <div class="tablet-6 desktop-4">
-                                    <div class="description object">
-                                        <h5>Custom animations.</h5>
-                                        <p>Add subtle reveal animations to any element with the help of an easy-to-use animation library.</p>
-                                    </div>
-                                </div>
-                                <div class="tablet-6 desktop-4">
-                                    <div class="description object">
-                                        <h5>Nifty little framework.</h5>
-                                        <p>Lancelot is built on top of a smart little CSS framework that is incredibly easy to understand – the code speaks for itself.</p>
-                                    </div>
-                                </div>
-                                <div class="tablet-6 desktop-4">
-                                    <div class="description object">
-                                        <h5>Contact form.</h5>
-                                        <p>An AJAX form that is always there when you need it. Just assign a <span class="success text">contact-toggle</span> class to any element and it's <a class="contact-toggle" href="#">ready to go</a>.</p>
-                                    </div>
-                                </div>
-                                <div class="tablet-6 desktop-4">
-                                    <div class="description object">
-                                        <h5>Subscription form.</h5>
-                                        <p>Not ready to launch? Use an AJAX subscription form to store emails in a file or integrate with <a href="http://mailchimp.com">MailChimp</a> or <a href="http://www.campaignmonitor.com">CampaignMonitor</a>.</p>
-                                    </div>
-                                </div>
-                                <div class="tablet-6 desktop-4">
-                                    <div class="description object">
-                                        <h5>Original files included.</h5>
-                                        <p>Original PSD and SASS files are included in the download for advanced customization.</p>
-                                    </div>
-                                </div>
-                            </div><!-- .grid -->
-
-                        </div><!-- .large margin -->
-
-                    </div><!-- .container -->
-                </div><!-- .section -->
+                
 
                 <div class="section">
                     <div class="container">
