--- a/index.html
+++ b/index.html
@@ -119,130 +119,24 @@
                     </div><!-- .container -->
                 </div><!-- .section -->
 
-                <div class="container">
-
-                    <div class="large margin">
-
-                        <h1 class="section-title">
-                            Packed with amaizing features.
-                            <small>
-                                Simple, effective and easy to use, Lancelot has<br class="hidden-on-phones">
-                                everyting to make your app stand out.
-                            </small>
-                        </h1>
-
-                    </div>
-
-                    <div class="large margin">
-
-                        <div class="vertically-centered grid">
-                            <div class="tablet-7">
-                                <img class="centered showcase-image hidden-on-phones" src="http://placehold.it/500x601" alt="Showcase image">
-                            </div>
-                            <div class="tablet-5">
-                                <div class="description grid">
-                                    <div class="description object">
-                                        <h4>Fits any app.</h4>
-                                        <p>Designed to be as flexible as possible, Lancelot can be easily adjusted to the style of your app.</p>
-                                    </div>
-                                    <div class="description object">
-                                        <h4>On any device.</h4>
-                                        <p>Showcase apps for iOS, Android or Windows Phone. Lancelot will help you create amaizing product images.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div><!-- .large margin -->
-
-                    <div class="large margin">
-
-                        <div class="vertically-centered grid">
-                            <div class="tablet-5">
-                                <div class="description grid">
-                                    <div class="description object">
-                                        <h4>Detailed documentation.</h4>
-                                        <p>The docs will walk you through setup and configuration, adding custom animations, generating device mockups and much more.</p>
-                                    </div>
-                                    <div class="description object">
-                                        <h4>And good support.</h4>
-                                        <p>Lancelot was built with care, and I treat customers the same way. Any problem or request you have, I will do my best to help.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tablet-7">
-                                <img class="centered showcase-image hidden-on-phones" src="http://placehold.it/450x602" alt="Showcase image">
-                            </div>
-                        </div><!-- .grid -->
-
-                    </div><!-- .large margin -->
-
-                </div><!-- .container -->
-
-                <div id="personality" class="background-image section">
+                <div id="madefor" class="background-image section">
 
                     <div class="container">
 
                         <div class="large margin">
 
                             <h1 class="section-title">
-                                With a touch of personality.
+                                Made for designgineers.
                                 <small>
-                                    Add background images to create a unique<br class="hidden-on-phones">
-                                    experience for your visitors.
+                                    But works for anyone who wants a simple,<br class="hidden-on-phones">
+                                    full-screen web browsing experience.
                                 </small>
                             </h1>
 
                         </div>
 
-                        <div class="showcase-slider">
-                            <img class="centered" src="http://placehold.it/260x468" alt="Showcase image" data-scroll-reveal="enter bottom and move 100px">
-                            <img class="centered" src="http://placehold.it/260x468" alt="Showcase image" data-scroll-reveal="wait 0.2s, then enter bottom and move 100px">
-                            <img class="centered" src="http://placehold.it/260x468" alt="Showcase image" data-scroll-reveal="wait 0.4s, then enter bottom and move 100px">    
-                            <img class="centered" src="http://placehold.it/260x468" alt="Showcase image">    
-                            <img class="centered" src="http://placehold.it/260x468" alt="Showcase image">    
-                            <img class="centered" src="http://placehold.it/260x468" alt="Showcase image">
-                        </div><!-- .showcase-slider -->
-
                     </div><!-- .container -->
 
-                </div><!-- .section -->
-
-                
-
-                <div class="section">
-                    <div class="container">
-
-                        <hr>
-
-                        <div class="large margin">
-                            <div class="testimonials-slider">
-
-                                <blockquote class="testimonial">
-                                    <p>
-                                        Went through dozens of templates before discovering<br class="visible-on-desktop">
-                                        Lancelot. So useful and easy to use! Love it!
-                                    </p>
-                                    <footer>
-                                        <cite>
-                                            <strong>Max Parker</strong> on the App Store
-                                        </cite>
-                                    </footer>
-                                </blockquote>
-
-                                <blockquote class="testimonial">
-                                    <p>Solid work. Minimal, functional, beautiful. <br class="visible-on-desktop">And really easy to use. Five stars.</p>
-                                    <footer>
-                                        <cite>
-                                            <strong>Elliot Wilkinson</strong> on the App Store
-                                        </cite>
-                                    </footer>
-                                </blockquote>
-
-                            </div><!-- .testimonials-slider -->
-                        </div><!-- .large margin -->
-
-                    </div><!-- .container -->
                 </div><!-- .section -->
 
                 <div class="footer">
@@ -252,13 +146,17 @@
 
                             <div class="small margin">
                                 <h5>
-                                    Start building your own landing page!
-                                    <small>Download Lancelot from Themeforest</small>
+                                    Built with &lt;3 by <a href="http://twitter.com/stakelon">@stakelon</a>
+                                    <small>
+                                        <em>Frameless uses</em><br/>
+                                        <a href="https://01.org/clear-sans">Clear Sans</a> and <a href="https://github.com/resir014t">resir014's</a> <a href="https://github.com/resir014/Clear-Sans-Webfont">Clear Sans webfont</a> for type<br />
+                                        <a href="https://github.com/mamaral">mamaral's</a> <a href="https://github.com/mamaral/Onboard">Onboard</a> for the walkthrough
+                                    </small>
                                 </h5>
                             </div>
 
                             <div class="small margin">
-                                <a class="large primary button" href="#">Download now</a>
+                                <a class="large primary button" href="#">Download for free</a>
                             </div>
 
                         </div><!-- .grid -->
