update github pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Frameless – a full-screen browser for iOS 8</title>
-        <meta name="description" content=""> 
+        <meta name="description" content="Framless for iOS 8 is the web browser for designers and prototypers that gets out of your way."> 
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets/img/favicon.png">  
@@ -44,7 +44,6 @@
                         <ul class="social-likes">
                             <li class="facebook" title="Share link on Facebook">Share</li>
                             <li class="twitter" title="Share link on Twitter">Tweet</li>
-                            <li class="plusone" title="Share link on Google+">+1</li>
                         </ul>
                     </nav><!-- .navbar-nav -->
 
@@ -69,7 +68,8 @@
                                 </h1>
 
                                 <div class="button-group">
-                                    <a class="large primary button" href="#">Download for free</a>
+                                    <a class="img-button hidden-on-phones" href="https://itunes.apple.com/us/app/id933580264"><img class="button-image" src="assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.svg" height="60"/></a>
+                                    <a class="large primary button visible-on-phones" href="https://itunes.apple.com/us/app/id933580264">Download on the iOS App Store</a>
                                     <a class="large hollow button" href="https://github.com/stakes/Frameless">Source on Github</a>
                                 </div>
 
@@ -117,27 +117,7 @@
                         </div><!-- .large margin -->
 
                     </div><!-- .container -->
-                </div><!-- .section -->
-
-                <div id="madefor" class="background-image section">
-
-                    <div class="container">
-
-                        <div class="large margin">
-
-                            <h1 class="section-title">
-                                Made for designgineers.
-                                <small>
-                                    But works for anyone who wants a simple,<br class="hidden-on-phones">
-                                    full-screen web browsing experience.
-                                </small>
-                            </h1>
-
-                        </div>
-
-                    </div><!-- .container -->
-
-                </div><!-- .section -->
+                </div><!-- .section --> 
 
                 <div class="footer">
                     <div class="container">
@@ -146,7 +126,7 @@
 
                             <div class="small margin">
                                 <h5>
-                                    Built with &lt;3 by <a href="http://twitter.com/stakelon">@stakelon</a>
+                                    Built with &lt;3 by <a href="http://twitter.com/stakelon">@stakelon</a>. Fork it on <a href="https://github.com/stakes/Frameless">Github</a>.
                                     <small>
                                         <em>Frameless uses</em><br/>
                                         <a href="https://01.org/clear-sans">Clear Sans</a> and <a href="https://github.com/resir014t">resir014's</a> <a href="https://github.com/resir014/Clear-Sans-Webfont">Clear Sans webfont</a> for type<br />
@@ -156,24 +136,7 @@
                             </div>
 
                             <div class="small margin">
-                                <a class="large primary button" href="#">Download for free</a>
-                            </div>
-
-                        </div><!-- .grid -->
-
-                        <hr>
-
-                        <div class="vertically-centered justified grid">
-
-                            <div class="tiny margin">
-                                © 2013–2014 happytodesign LLC
-                            </div>
-
-                            <div class="tiny margin">
-                                <a href="http://twitter.com" class="icon-social-twitter"></a>
-                                <a href="http://facebook.com" class="icon-social-facebook"></a>
-                                <a href="http://instagram.com" class="icon-social-instagram"></a>
-                                <a href="http://plus.google.com" class="icon-social-google"></a>
+                                <a class="img-button" href="https://itunes.apple.com/us/app/id933580264"><img class="button-image" src="assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.svg" height="60"/></a>
                             </div>
 
                         </div><!-- .grid -->
