fix spelling error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Frameless – a full-screen browser for iOS 8</title>
-        <meta name="description" content="Framless for iOS 8 is the web browser for designers and prototypers that gets out of your way."> 
+        <meta name="description" content="Frameless for iOS 8 is the web browser for designers and prototypers that gets out of your way."> 
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets/img/favicon.png">  
